[package]
name = "ntex-redis"
version = "0.4.0-alpha.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Redis client"
documentation = "https://docs.rs/ntex-redis"
repository = "https://github.com/ntex-rs/ntex-redis.git"
categories = ["network-programming"]
keywords = ["ntex", "redis"]
license = "MIT"
exclude = [".gitignore", ".travis.yml", ".cargo/config"]
edition = "2018"

[dependencies]
ntex = "0.6.0-alpha.0"
itoa = "1.0.0"
btoi = "0.4.2"
log = "0.4"
derive_more = "0.99"

[dev-dependencies]
rand = "0.8"
env_logger = "0.10"
ntex = { version = "0.6.0-alpha.0", features = ["tokio"] }

[patch.crates-io]
ntex = { git = "https://github.com/ntex-rs/ntex.git", branch = "service-0-4" }
ntex-connect = { git = "https://github.com/ntex-rs/ntex.git", branch = "service-0-4" }
ntex-io = { git = "https://github.com/ntex-rs/ntex.git", branch = "service-0-4" }
ntex-service = { git = "https://github.com/ntex-rs/ntex.git", branch = "service-0-4" }
ntex-util = { git = "https://github.com/ntex-rs/ntex.git", branch = "service-0-4" }
ntex-tls = { git = "https://github.com/ntex-rs/ntex.git", branch = "service-0-4" }
ntex-tokio = { git = "https://github.com/ntex-rs/ntex.git", branch = "service-0-4" }
ntex-h2 = { git = "https://github.com/ntex-rs/ntex-h2.git", branch = "service-0-4" }
