[package]
name = "ntex-redis"
version = "0.4.0-beta.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "Redis client"
documentation = "https://docs.rs/ntex-redis"
repository = "https://github.com/ntex-rs/ntex-redis.git"
categories = ["network-programming"]
keywords = ["ntex", "redis"]
license = "MIT"
exclude = [".gitignore", ".travis.yml", ".cargo/config"]
edition = "2018"

[dependencies]
ntex = "0.6.0-beta.0"
itoa = "1.0.0"
btoi = "0.4.2"
log = "0.4"
derive_more = "0.99"

[dev-dependencies]
rand = "0.8"
env_logger = "0.10"
ntex = { version = "0.6.0-beta.0", features = ["tokio"] }
